--- a/app/src/main/res/layout/activity_user_view.xml
+++ b/app/src/main/res/layout/activity_user_view.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ListView
-            android:id="@+id/admin_manage_list"
+            android:id="@+id/user_manage_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
