--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                 android:text="허가(간부)" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/list_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="목록 관리" />
