--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/app_title"
         android:layout_width="178dp"
         android:layout_height="47dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="130dp"
         android:layout_marginEnd="8dp"
-        android:text="휴가 관리자"
+        android:text="@string/app_title"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="군번"
+            android:hint="@string/activity_main_milnum"
             android:inputType="textPersonName" />
 
         <EditText
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="생년월일(YYMMDD)"
+            android:hint="@string/placeholder_birth"
             android:inputType="textPersonName" />
 
         <LinearLayout
@@ -61,13 +61,13 @@
                 android:id="@+id/manager_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="허가(간부)" />
+                android:text="@string/activitiy_main_manager_view" />
 
             <Button
                 android:id="@+id/list_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="목록 관리" />
+                android:text="@string/activitiy_main_user_view" />
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
