--- a/app/src/main/res/layout/activity_qr_popup.xml
+++ b/app/src/main/res/layout/activity_qr_popup.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#eeeeee"
     android:orientation="vertical"
     android:layout_width="300dp"
@@ -11,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="@string/popup_notice"
+            android:text="@string/activitiy_qr_title"
             android:textSize="20sp"
             android:textColor="#fff"
             android:gravity="center"
@@ -21,6 +23,30 @@
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
+    <!-- QRCODE -->
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="200sp">
+
+        <ImageView
+            android:id="@+id/QR_Image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+    <!-- QRCODE -->
+
+
     <!-- Notice -->
     <LinearLayout
         android:padding="24dp"
@@ -28,14 +54,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/text_notice"
+            android:id="@+id/txtText"
             android:textSize="15sp"
             android:textColor="#000"
             android:alpha="0.87"
             android:gravity="center"
             android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:linksClickable="true"
+            android:autoLink="web"/>
     </LinearLayout>
     <!-- Notice -->
 
@@ -51,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/button_close"
+            android:id="@+id/bbutton"
             android:text="@string/popup_accept"
             android:textSize="15sp"
             android:textColor="#ff7a00"
